package protobuf;

message Request{
	required uint64 id = 1;
	required string method = 2;
	optional bytes serialized_request = 3;
	optional string timer = 4;
	optional string desc = 5;
	extensions 100 to max;
}

message RpcErrorResponse{
	required string method = 1;
	required string text = 2;
}

message ConnectorInfo{
	required uint32 ServerId = 1;
	required uint32 PlayerCount = 2;
	required string TcpServerIp = 3;
	required string HttpServerIp = 4;
}

message ConnectorInfoResult{
	enum Result {
		OK = 0;
		ERROR = 1;
	}
	required Result result = 1 [default = OK];
	required uint32 server_time = 2;
}

message LoginInfo{
	required string serverIp = 1;
	required string gsInfo = 2;
}

message Login{
	optional string uid = 1;
	required string account = 2;
	required string password = 3;
	optional uint32 create_time = 4;
	optional string option = 5;
	optional uint32 language = 6;
	optional string udid = 7;
	optional string sessionKey = 8;
}

message LoginResult{
	enum Result {
		OK = 0;
		SERVERERROR = 1;
		USERNOTFOUND = 2;
		AUTH_FAILED = 3;
		ISONFIRE = 4;
	}
	required Result result = 1 [default = OK];
	required uint32 server_time = 2;
	required string sessionKey = 3;
	required string uid = 4;
	optional string errmsg = 5;
}

message Ping{
	
}

message PingResult{
	required uint32 server_time = 1;
}

message Chat{
	required string msg = 1;
}

message ChatResult{
	required string msg = 1;
}


message PlayerBaseInfo{
    required string uid = 1;
    required string name = 2;			//名字
    required uint32 level = 3;			//等级
    required uint32 experience = 4;		//经验
	required uint32 HP = 6;				//生命值
	required uint32 MP = 7;				//魔法值
	required uint32 Rage = 8;			//怒气值
	required uint32 maxHP = 9;			//最大生命值
	required uint32 maxMP = 10;			//最大魔法值
	required uint32 maxRage = 11;		//最大怒气值
    optional uint32 gender = 12;		//性别
    optional uint32 modelid = 13;		//模型id
    optional Transform transform = 14;	//位置
	optional uint32 Strenght = 15;		//力量
	optional uint32 Velocity = 16;		//速度
	optional uint32 Mana = 17;			//魔法
	optional uint32 Defence = 18;		//强壮
	optional uint32 Stamina = 19;		//根骨
	optional uint32 ATK = 20;			//攻击力
	optional uint32 Armor = 21;			//防御力
	optional uint32 Agility = 22;		//敏捷
	optional uint32 Spirit = 23;		//精神
	optional uint32 Recovery = 24;		//生命回复
}

message PlayerInfo{
	required PlayerBaseInfo base = 1;
}

message Vector3{
    required float X = 1;
    required float Y = 2;
    required float Z = 3;
}

message Quaternion{
    required float X = 1;
    required float Y = 2;
    required float Z = 3;
    required float W = 4;
}

message Transform{
    required Vector3 position = 1;
    required Quaternion rotation = 2;
    required Vector3 scale = 3;
}