syntax = "proto3";

package protobuf;

option optimize_for = SPEED;

message AL_CheckAccountResult{
	enum Result {
		SUCCESS = 0;
		OK = 1;
		SERVERERROR = 2;
		USERNOTFOUND = 3;
		AUTH_FAILED = 4;
		ISONFIRE = 5;
	}
	Result result = 1;
	string sessionKey = 2;
	string uid = 3;
	string errmsg = 4;
}