syntax = "proto3";

package protobuf;

option optimize_for = SPEED;

message LA_CheckAccount{
	string uid = 1;
	string account = 2;
	string password = 3;
	string option = 4;
	uint32 language = 5;
	string udid = 6;
}